@@ -59,6 +59,19 @@
 # retained message will always be published. This affects all listeners.
 #check_retain_source true
 
+# The maximum number of client sessions to allow across the whole broker. In
+# this context a client session means either a client currently connected via
+# the network, or a client that has clean_session = False (MQTT v3.x) and is
+# disconnected, or has disconnected and still hasn't exceeded its session
+# expiry interval (MQTT v5).
+#
+# See also the max_connections setting, which applies to listeners. If you set
+# global_max_clients to 1000 and max_connections on a listener to 10, then that
+# means only 10 simultaneous connections will be allowed at once, with an
+# overall maximum of 1000 client sessions.
+#
+#global_max_clients -1
+
 # QoS 1 and 2 messages will be allowed inflight per client until this limit
 # is exceeded.  Defaults to 0. (No maximum)
 # See also max_inflight_messages
@@ -256,8 +269,10 @@
 #http_dir
 
 # The maximum number of client connections to allow. This is
-# a per listener setting.
-# Default is -1, which means unlimited connections.
+# a per listener setting. Use global_max_clients if you wish to enforce a
+# client limit across the whole broker.
+# Default is -1, which means unlimited connections, unless otherwise limited by
+# global_max_clients.
 # Note that other process limits mean that unlimited connections
 # are not really possible. Typically the default maximum number of
 # connections possible is around 1024.
