@@ -273,6 +273,7 @@ struct mosquitto__config {
 	int cmd_port_count;
 	bool daemon;
 	bool enable_control_api;
+	int global_max_clients;
 	struct mosquitto__listener default_listener;
 	struct mosquitto__listener *listeners;
 	int listener_count;
